--- a/Assets/Project/UX/Documents/LevelSelection.uxml
+++ b/Assets/Project/UX/Documents/LevelSelection.uxml
@@ -1,9 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<engine:UXML
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:engine="UnityEngine.UIElements"
-    xmlns:editor="UnityEditor.UIElements"
-    xsi:noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd"
->
-    
-</engine:UXML>
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <Style src="project://database/Assets/UI%20Toolkit/Button.uss?fileID=7433441132597879392&amp;guid=03e0bbef373da2b4b8b47d47ea0e137c&amp;type=3#Button" />
+    <ui:VisualElement name="Container" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); padding-left: 52px; padding-right: 52px; padding-top: 52px; padding-bottom: 52px;">
+        <ui:VisualElement name="Back" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: column;">
+            <ui:Button text="Back" display-tooltip-when-elided="true" name="BackPage" style="-unity-font: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o.otf?fileID=12800000&amp;guid=8f23bc6f1097f264481d258d131bfc2e&amp;type=3#AquireLight-YzE0o&apos;); -unity-font-definition: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o%20SDF.asset?fileID=11400000&amp;guid=12dca6e5b54fa304caca6db2d0a9e4d4&amp;type=2#AquireLight-YzE0o SDF&apos;); font-size: 57px; flex-direction: row; align-items: flex-end; justify-content: space-between; align-self: flex-start;" />
+        </ui:VisualElement>
+        <ui:VisualElement name="LevelSelection" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: space-around; align-items: stretch; flex-wrap: nowrap; align-self: flex-start; -unity-text-align: upper-center; padding-left: 200px; padding-right: 200px;">
+            <ui:VisualElement name="Part1" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: center; justify-content: space-between; align-items: center; flex-direction: column; font-size: 50px;">
+                <ui:Button text="Level 1" display-tooltip-when-elided="true" name="Floor1" class="level-selection-btn" />
+                <ui:Button text="Level 3" display-tooltip-when-elided="true" name="Floor3" class="level-selection-btn" />
+            </ui:VisualElement>
+            <ui:VisualElement name="Part2" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: center; font-size: 50px; align-items: center;">
+                <ui:Button text="Level 2" display-tooltip-when-elided="true" name="Floor2" class="level-selection-btn" />
+                <ui:Button text="Level 4" display-tooltip-when-elided="true" name="Floor4" class="level-selection-btn" />
+            </ui:VisualElement>
+        </ui:VisualElement>
+    </ui:VisualElement>
+</ui:UXML>
