--- a/Assets/Project/UX/Documents/LevelSelection.uxml
+++ b/Assets/Project/UX/Documents/LevelSelection.uxml
@@ -1,17 +1,17 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Project/UX/StyleSheets/Buttons.uss?fileID=7433441132597879392&amp;guid=f0f388a6781b7e34fb200199b9e5c16a&amp;type=3#Buttons" />
-    <ui:VisualElement name="Container" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); padding-left: 52px; padding-right: 52px; padding-top: 52px; padding-bottom: 52px;">
-        <ui:VisualElement name="Back" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: column;">
-            <ui:Button text="Back" display-tooltip-when-elided="true" name="BackPage" class="menu-btn" style="align-self: flex-start; font-size: 40px; -unity-font-style: normal;" />
+    <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); padding-left: 52px; padding-right: 52px; padding-top: 52px; padding-bottom: 52px;">
+        <ui:VisualElement picking-mode="Ignore" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: column;">
+            <ui:Button text="Back" display-tooltip-when-elided="true" name="back-btn" class="menu-btn" style="align-self: flex-start; font-size: 40px; -unity-font-style: normal;" />
         </ui:VisualElement>
-        <ui:VisualElement name="LevelSelection" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: space-around; align-items: stretch; flex-wrap: nowrap; align-self: flex-start; -unity-text-align: upper-center; padding-left: 200px; padding-right: 200px;">
-            <ui:VisualElement name="Part1" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: center; justify-content: space-between; align-items: center; flex-direction: column; font-size: 50px;">
-                <ui:Button text="Level 1" display-tooltip-when-elided="true" name="Floor1" class="level-selection-btn menu-btn" />
-                <ui:Button text="Level 3" display-tooltip-when-elided="true" name="Floor3" class="level-selection-btn menu-btn" />
+        <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: space-around; align-items: stretch; flex-wrap: nowrap; align-self: flex-start; -unity-text-align: upper-center; padding-left: 200px; padding-right: 200px;">
+            <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: center; justify-content: space-between; align-items: center; flex-direction: column; font-size: 50px;">
+                <ui:Button text="Level 1" display-tooltip-when-elided="true" name="level1-btn" class="level-selection-btn menu-btn" />
+                <ui:Button text="Level 3" display-tooltip-when-elided="true" name="level3-btn" class="level-selection-btn menu-btn" />
             </ui:VisualElement>
-            <ui:VisualElement name="Part2" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: center; font-size: 50px; align-items: center;">
-                <ui:Button text="Level 2" display-tooltip-when-elided="true" name="Floor2" class="level-selection-btn menu-btn" />
-                <ui:Button text="Level 4" display-tooltip-when-elided="true" name="Floor4" class="level-selection-btn menu-btn" />
+            <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: center; font-size: 50px; align-items: center;">
+                <ui:Button text="Level 2" display-tooltip-when-elided="true" name="level2-btn" class="level-selection-btn menu-btn" />
+                <ui:Button text="Level 4" display-tooltip-when-elided="true" name="level4-btn" class="level-selection-btn menu-btn" />
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
