--- a/Assets/Project/UX/StyleSheets/InGameHUD.uss
+++ b/Assets/Project/UX/StyleSheets/InGameHUD.uss
@@ -14,3 +14,21 @@
     border-top-width: 0;
     border-bottom-width: 0;
 }
+
+.on-screen-lbl {
+    font-size: 64px;
+    color: rgb(255, 255, 255);
+    -unity-font: url('project://database/Assets/Project/Fonts/AquireLight-YzE0o.otf?fileID=12800000&guid=8f23bc6f1097f264481d258d131bfc2e&type=3#AquireLight-YzE0o');
+    -unity-font-definition: url('project://database/Assets/Project/Fonts/AquireLight-YzE0o%20SDF.asset?fileID=11400000&guid=12dca6e5b54fa304caca6db2d0a9e4d4&type=2#AquireLight-YzE0o SDF');
+    -unity-font-style: bold;
+    text-shadow: 2px 2px 24px rgb(0, 0, 0);
+    -unity-text-align: middle-right;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
