--- a/Assets/Project/UX/Documents/InGameHUD.uxml
+++ b/Assets/Project/UX/Documents/InGameHUD.uxml
@@ -3,21 +3,21 @@
     <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); position: absolute; width: 100%; height: 100%; align-items: center; align-self: center; justify-content: center;">
         <ui:VisualElement name="crosshair-img" style="background-color: rgba(0, 0, 0, 0); width: 40px; height: 40px; align-self: center; align-items: center; justify-content: center; background-image: url(&apos;project://database/Assets/ThirdParty/TextMesh%20Pro/Sprites/crosshair-icon-1024x1024-p0ttc6ou.png?fileID=2800000&amp;guid=e64bbc4055cb5ae49b1aad1af4defd61&amp;type=3#crosshair-icon-1024x1024-p0ttc6ou&apos;);" />
     </ui:VisualElement>
-    <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); padding-left: 30px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px;">
-        <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); padding-left: 0; padding-right: 0;">
-            <ui:Label text="Wave 1" name="wave-lbl" class="on-screen-lbl" />
+    <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); padding-left: 30px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px;">
+        <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); padding-left: 0; padding-right: 0;">
+            <ui:Label text="Wave 1" name="wave-lbl" picking-mode="Ignore" class="on-screen-lbl" />
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-items: stretch; align-self: stretch; flex-direction: row; margin-left: 11px; margin-right: 11px; margin-top: 11px; margin-bottom: 11px;">
-            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);" />
-            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);" />
+            <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);" />
+            <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);" />
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row;">
             <ui:VisualElement style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); -unity-text-align: upper-left;">
-                <ui:ProgressBar value="50" title="1 / 100" name="health-bar" style="font-size: 36px; color: rgb(255, 255, 255); -unity-font: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o.otf?fileID=12800000&amp;guid=8f23bc6f1097f264481d258d131bfc2e&amp;type=3#AquireLight-YzE0o&apos;); -unity-font-definition: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o%20SDF.asset?fileID=11400000&amp;guid=12dca6e5b54fa304caca6db2d0a9e4d4&amp;type=2#AquireLight-YzE0o SDF&apos;); -unity-font-style: bold;" />
+                <ui:ProgressBar value="50" title="1 / 100" name="health-bar" picking-mode="Ignore" style="font-size: 36px; color: rgb(255, 255, 255); -unity-font: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o.otf?fileID=12800000&amp;guid=8f23bc6f1097f264481d258d131bfc2e&amp;type=3#AquireLight-YzE0o&apos;); -unity-font-definition: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o%20SDF.asset?fileID=11400000&amp;guid=12dca6e5b54fa304caca6db2d0a9e4d4&amp;type=2#AquireLight-YzE0o SDF&apos;); -unity-font-style: bold;" />
             </ui:VisualElement>
-            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); min-width: auto; min-height: auto; padding-right: 273px; align-items: auto;" />
+            <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); min-width: auto; min-height: auto; padding-right: 273px; align-items: auto;" />
             <ui:VisualElement style="padding-right: 30px;">
-                <ui:Label tabindex="-1" text="24/90" display-tooltip-when-elided="true" name="ammo-lbl" class="on-screen-lbl" />
+                <ui:Label tabindex="-1" text="24/90" display-tooltip-when-elided="true" name="ammo-lbl" picking-mode="Ignore" class="on-screen-lbl" />
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
