--- a/Assets/Project/UX/Documents/LevelSelection.uxml
+++ b/Assets/Project/UX/Documents/LevelSelection.uxml
@@ -6,12 +6,12 @@
         </ui:VisualElement>
         <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: space-around; align-items: stretch; flex-wrap: nowrap; align-self: flex-start; -unity-text-align: upper-center; padding-left: 200px; padding-right: 200px;">
             <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: center; justify-content: space-between; align-items: center; flex-direction: column; font-size: 50px;">
-                <ui:Button text="Level 1" display-tooltip-when-elided="true" name="level1-btn" class="level-selection-btn menu-btn" />
+                <ui:Button text="Level 1" display-tooltip-when-elided="true" name="level1-btn" class="level-selection-btn menu-btn" style="background-image: url(&apos;project://database/Assets/Project/Textures/UI/BtnBackground/Level1.png?fileID=2800000&amp;guid=66422ab5d69db47409d91c7a85108af4&amp;type=3#Level1&apos;);" />
                 <ui:Button text="Level 3" display-tooltip-when-elided="true" name="level3-btn" class="level-selection-btn menu-btn" />
             </ui:VisualElement>
             <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: center; font-size: 50px; align-items: center;">
-                <ui:Button text="Level 2" display-tooltip-when-elided="true" name="level2-btn" class="level-selection-btn menu-btn" />
-                <ui:Button text="Level 4" display-tooltip-when-elided="true" name="level4-btn" class="level-selection-btn menu-btn" />
+                <ui:Button text="Level 2" display-tooltip-when-elided="true" name="level2-btn" class="level-selection-btn menu-btn" style="background-image: none;" />
+                <ui:Button text="Level 4" display-tooltip-when-elided="true" name="level4-btn" class="level-selection-btn menu-btn" style="background-image: url(&apos;project://database/Assets/Project/Textures/UI/BtnBackground/level4.2.png?fileID=2800000&amp;guid=2f1bc6b3bd4589240a032cf993300c9d&amp;type=3#level4.2&apos;);" />
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
