--- a/Assets/Project/UX/Documents/MainMenu.uxml
+++ b/Assets/Project/UX/Documents/MainMenu.uxml
@@ -1,13 +1,12 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Project/UX/StyleSheets/Buttons.uss?fileID=7433441132597879392&amp;guid=f0f388a6781b7e34fb200199b9e5c16a&amp;type=3#Buttons" />
-    <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; padding-left: 100px; padding-right: 100px; padding-top: 100px; padding-bottom: 100px;">
+    <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; padding-left: 100px; padding-right: 100px; padding-top: 100px; padding-bottom: 100px; background-image: url(&apos;project://database/Assets/Project/Textures/UI/BtnBackground/MainMenu.png?fileID=2800000&amp;guid=9a4c1318ef5d1534a9f2827c13bf4483&amp;type=3#MainMenu&apos;); -unity-background-image-tint-color: rgba(100, 100, 100, 0.98);">
         <ui:VisualElement picking-mode="Ignore" style="background-color: rgba(0, 0, 0, 0); align-self: center;">
-            <ui:Label tabindex="-1" text="TITLE" name="title-lbl" enable-rich-text="false" style="font-size: 82px; -unity-font-definition: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o%20SDF.asset?fileID=11400000&amp;guid=12dca6e5b54fa304caca6db2d0a9e4d4&amp;type=2#AquireLight-YzE0o SDF&apos;); -unity-font: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o.otf?fileID=12800000&amp;guid=8f23bc6f1097f264481d258d131bfc2e&amp;type=3#AquireLight-YzE0o&apos;); -unity-font-style: bold; color: rgb(221, 221, 221);" />
+            <ui:Label tabindex="-1" text="Kasoku Gear" name="title-lbl" enable-rich-text="false" style="font-size: 82px; -unity-font-definition: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o%20SDF.asset?fileID=11400000&amp;guid=12dca6e5b54fa304caca6db2d0a9e4d4&amp;type=2#AquireLight-YzE0o SDF&apos;); -unity-font: url(&apos;project://database/Assets/Project/Fonts/AquireLight-YzE0o.otf?fileID=12800000&amp;guid=8f23bc6f1097f264481d258d131bfc2e&amp;type=3#AquireLight-YzE0o&apos;); -unity-font-style: bold; color: rgb(221, 221, 221);" />
         </ui:VisualElement>
         <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);" />
         <ui:VisualElement picking-mode="Ignore" style="background-color: rgba(0, 0, 0, 0); align-self: center;">
             <ui:Button text="PLAY" display-tooltip-when-elided="true" name="play-btn" class="menu-btn" />
-            <ui:Button text="OPTION" name="option-btn" class="menu-btn" />
             <ui:Button text="QUIT" name="quit-btn" class="menu-btn" />
         </ui:VisualElement>
     </ui:VisualElement>
